# blit

./: Cargo.toml  README.md  blit-presentation.md  flake.nix
blit-cpu/: Cargo.toml
blit-cpu/benches/: renderer.rs
blit-cpu/src/: lib.rs  pixel.rs  test.rs
blit-cpu/src/render/: image.rs  image_patch.rs  shadow.rs
blit-cpu/src/strategy/: command.rs  line.rs  raster.rs
blit-cpu/src/text/: mod.rs  paragraph.rs
blit-software/: Cargo.toml
blit-software/benches/: renderer.rs
blit-software/src/: lib.rs  pixel.rs  shadow.rs  test.rs
blit-software/src/image/: mod.rs  prepared.rs
blit-software/src/rectangle/: mod.rs  prepared.rs  rounded.rs
cache/: Cargo.toml
cache/src/: lib.rs  list.rs
core/: Cargo.toml
core/src/: animation.rs  color.rs  geometry.rs  input.rs  interact.rs  keyboard.rs  layout.rs  lib.rs  paint_list.rs  platform.rs  resource.rs  test.rs  timer.rs
cpu/: Cargo.toml
cpu/src/: cache.rs  lib.rs  pixel.rs  test.rs
desktop/: Cargo.toml
desktop/src/: event_loop.rs  lib.rs  pixel.rs
example/: Cargo.toml
example/src/: main.rs  platform.rs  todo.rs
executor/: Cargo.toml
executor/src/: lib.rs  scope.rs  task.rs
font/: Cargo.toml
font/src/: layout.rs  lib.rs  raster.rs  test.rs
software_renderer/: Cargo.toml
software_renderer/src/: image.rs  lib.rs  pixel.rs  rectangle.rs
src/: animation.rs  color.rs  component.rs  dirty.rs  image.rs  input.rs  interaction.rs  layout.rs  lib.rs  platform.rs  rect.rs  test.rs  text.rs  timer.rs
src/widgets/: button.rs  image.rs  mod.rs  rectangle.rs  scroll_area.rs  text_input.rs
(+50 files in other folders)
