[package]
name = "blit-cpu"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
blit = { path = ".." }
clru = "0.6"
fontdue = "0.9"
slotmap = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "renderer"
harness = false
